Created Method for Employee Query