@@ -3,7 +3,6 @@ package com.test.serviceimpl;
 import com.test.dto.EmployeeDTO;
 import com.test.exception.EmployeeInactiveException;
 import com.test.exception.EmployeeNotFoundException;
-import com.test.model.Address;
 import com.test.model.Employee;
 import com.test.repo.EmployeeRepository;
 import com.test.service.EmployeeService;
@@ -59,7 +58,7 @@ public class EmployeeServiceImpl implements EmployeeService {
         Optional<Employee> employee = employeeRepository.findById(empId);
         if (employee.isPresent()) {
             Employee existingEmployee = employee.get();
-            if (existingEmployee.getActive()) {
+            if (existingEmployee.getActive().equals(Boolean.TRUE)) {
                 existingEmployee.setActive(false);
                 employeeRepository.save(existingEmployee);
             } else {
@@ -140,8 +139,7 @@ public class EmployeeServiceImpl implements EmployeeService {
         if (employeeList.isEmpty()) {
             throw new EmployeeNotFoundException("Employee not found for the given input !!");
         } else {
-            List<EmployeeDTO> employeeDTOList =
-                    Stream.of(employeeList).flatMap(List::stream).map(entityToDto -> modelMapper.map(entityToDto, EmployeeDTO.class)).toList();
+            List<EmployeeDTO> employeeDTOList = Stream.of(employeeList).flatMap(List::stream).map(entityToDto -> modelMapper.map(entityToDto, EmployeeDTO.class)).toList();
             return employeeDTOList;
         }
     }
@@ -151,9 +149,14 @@ public class EmployeeServiceImpl implements EmployeeService {
      * @return
      */
     @Override
-    public List<EmployeeDTO> getDataByQuery(Long empId, String pinCode) {
+    public List<EmployeeDTO> getDataByQuery(Long empId, String pinCode) throws EmployeeNotFoundException {
         List<Employee> employeeDTOS = employeeRepository.findDataByQuery(empId, pinCode);
-        return employeeDTOS.stream().map(x-> modelMapper.map(x, EmployeeDTO.class)).collect(Collectors.toList());
+        if (employeeDTOS.isEmpty()){
+            throw new EmployeeNotFoundException("Data is not available for the given input !!");
+        }else {
+            return Stream.of(employeeDTOS).flatMap(List::stream).map(employee -> modelMapper.map(employee,EmployeeDTO.class)).toList();
+        }
+
     }
 
 }
